--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li>
         <a href="ЛБ1/index.html">1 лабораторная работа</a>
     </li>
+    <li>
+        <a href="ЛБ2/index.html">2 лабораторная работа</a>
+    </li>
 </ul>
 
 </body>
