--- a/index.html
+++ b/index.html
@@ -1,13 +1,26 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ЛР4</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Главная</title>
 </head>
 <body>
-    <button class="vibrate-button">Click on me</button>
-    <a href="#" class="animated-link">Link to a very important site</a>
-    <div class="ball"></div>
+
+<h1>Лабораторные работы</h1>
+<ul>
+    <li>
+        <a href="ЛБ1/index.html">1 лабораторная работа</a>
+    </li>
+    <li>
+        <a href="ЛБ2/index.html">2 лабораторная работа</a>
+    </li>
+    <li>
+        <a href="ЛБ3/index.html">3 лабораторная работа</a>
+    </li>
+    <li>
+        <a href="ЛР4/index.html">4 лабораторная работа</a>
+    </li>
+</ul>
+
 </body>
 </html>
