--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
     <li>
         <a href="ЛР4/index.html">4 лабораторная работа</a>
     </li>
+    <li>
+        <a href="ЛР5/index.html">5 лабораторная работа</a>
+    </li>
+    <li>
+        <a href="ЛР6/index.html">6 лабораторная работа</a>
+    </li>
+    <li>
+        <a href="ЛР7/index.html">7 лабораторная работа</a>
+    </li>
 </ul>
 
 </body>
